deno-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deno-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deno-app
  template:
    metadata:
      labels:
        app: deno-app
    spec:
      containers:
        - name: deno-container
          image: beuzeuh/deno-todo-app:latest
          ports:
            - containerPort: 8080
