deno-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deno-service
spec:
  selector:
    app: deno-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
